force-app/main/default/objects/Contract/fields/Fix_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fix_Payment__c</fullName>
    <description>Data Partners (Wolves) - According to the Contract T&amp;C there are cases where we pay the Partner a fix price per Quarter.</description>
    <inlineHelpText>Fix Price we pay the Partner every Month/Quarter</inlineHelpText>
    <label>Fix Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>