force-app/main/default/objects/Contract/fields/Payment_Cap__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cap__c</fullName>
    <description>Data Partners (Wolves) - Indicates if there is a payment cap in the Contract. Used in the &quot;Data Partner&quot; Account. In case the total monthly payment is greater than the &quot;Payment Cap&quot; the last should override and we pay the Partner the Cap.</description>
    <label>Payment Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>