force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Payment_Method__c</columns>
    <columns>Fix_Payment__c</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <columns>Payment_Cap__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>contains</operation>
        <value>Davidovich</value>
    </filters>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>notEqual</operation>
        <value>Terminated</value>
    </filters>
    <label>Contracts - Active - Partners</label>
</ListView>